--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
@@ -33,4 +35,6 @@
         <target>1.7</target>
     </configuration>
 </plugin>
+       </plugins>
+    </build>
 </project>
